# nativefiledialog-extended

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  nfd_cocoa.m  nfd_common.c  nfd_gtk.c  nfd_gtk.cpp  nfd_linux_shared.hpp  nfd_portal.cpp  nfd_win.cpp
src/include/: nfd.h  nfd.hpp  nfd_glfw3.h  nfd_sdl2.h
test/: CMakeLists.txt  test_glfw.c  test_opendialog.c  test_opendialog_cpp.cpp  test_opendialog_native.c  test_opendialog_native_with.c  test_opendialog_with.c  test_opendialogmultiple.c  test_opendialogmultiple_cpp.cpp  test_opendialogmultiple_enum_native.c  test_opendialogmultiple_native.c  test_pickfolder.c  test_pickfolder_cpp.cpp  test_pickfolder_native.c  test_pickfolder_native_with.c  test_pickfolder_with.c  test_pickfoldermultiple.c  test_pickfoldermultiple_native.c  test_savedialog.c  test_savedialog_native.c  test_savedialog_native_with.c  test_savedialog_with.c  test_sdl.c  test_sdl.manifest
